# qml_examples

Day1/: Button.qml  CMakeLists.txt  main.qml
Day3/: CMakeLists.txt  main.qml
Day4/: CMakeLists.txt  MovieListItem.qml  MovieListView.qml  main.qml  qml.qrc
Day5/: CMakeLists.txt  backend_qml.cpp  backend_qml.h  main.cpp  main.qml
Day6/: Button.qml  CMakeLists.txt  main.qml  main.qml.autosave  qml.qrc
build-Day5-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Day5.ilk  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Day5-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/Day5_autogen/: deps  mocs_compilation.cpp
build-Day5-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/Day5_autogen/EWIEGA46WW/: moc_backend_qml.cpp  moc_backend_qml.cpp.d  qrc_qml.cpp
build-Day6-Desktop_x86_windows_msvc2005_pe_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Day6.ilk  build.ninja  cmake_install.cmake
build-Day6-Desktop_x86_windows_msvc2005_pe_64bit-Debug/Day6_autogen/: deps
build-login_page-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  login_page.ilk
build-login_page-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/login_page_autogen/: deps  mocs_compilation.cpp
build-stack_view-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  stack_view.ilk
build-stack_view-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/stack_view_autogen/: deps
login_page/: CMakeLists.txt  CardItem.qml  LoginPage.qml  MainPage.qml  NavigationStack.qml  logincontroller.cpp  logincontroller.h  main.cpp  main.qml  postcontroller.cpp  postcontroller.h  qml.qrc
oop_python_midterm2/: myclass.py  oop_python_midterm2.pyproject
python_oop_midterm2/: python_oop_midterm2.pyproject  widget.py
stack_view/: CMakeLists.txt  main.qml
threejs_qml_example/: CMakeLists.txt  Screen.qml  main.qml  qml.qrc
(+46 files in other folders)
